--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.5.0",
     "@vercel/blob": "^1.1.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "midtrans-client": "^1.4.3",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
@@ -29,7 +33,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "prisma": "^6.15.0",
+    "prisma": "^6.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
